--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <button onclick="drawNextScene()">Click Here to Move Forward</button>
 
-<canvas id="myCanvas" width="400" height="480" style="border:1px solid #d3d3d3; background-color:cyan;">
+<canvas id="myCanvas" width="400" height="480" style="border:1px solid #d3d3d3; background-color:red;">
 Your browser does not support the HTML5 canvas tag.</canvas>
   
   
